--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CalculerUnPourcentage - Outil de Calcul en Ligne</title>
+  <title>CalculerUnPourcentage - La calculatrice experte</title>
+  <meta name="description" content="Outil gratuit pour vos calculs de pourcentage : TVA, hausses, baisses et ratios. Simple, rapide et 100% confidentiel.">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Inter', sans-serif; background-color: #f8fafc; }
+    body { font-family: 'Inter', sans-serif; background-color: #f8fafc; scroll-behavior: smooth; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
+    .selection-indigo::selection { background-color: #e0e7ff; color: #3730a3; }
   </style>
   <script type="importmap">
 {
@@ -26,7 +28,7 @@
 }
 </script>
 </head>
-<body>
+<body class="selection-indigo">
   <div id="root"></div>
   <script type="module" src="./index.js"></script>
 </body>
