--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <title>CalculerUnPourcentage - La calculatrice experte</title>
   <meta name="description" content="Outil gratuit pour vos calculs de pourcentage : TVA, hausses, baisses et ratios. Simple, rapide et 100% confidentiel.">
   <script src="https://cdn.tailwindcss.com"></script>
